# Cody

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  USAGE.md  analyzer.py  app.py  config.py  db_manager.py  debug_analyzer.py  docker-compose.yml  dockerfile  frontend.html  graph_data.json  main.py  package.json  pyproject.toml  quick_test.py  requirements.txt  simple_analyzer.py  start-docker.bat  start-docker.sh  start.bat  test_analyzer.py  test_api.py  test_api_full.py  test_neo4j.py
.cody/: pyvenv.cfg
.cody/Scripts/: activate  activate.bat
frontend/: graph_data_new.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CodeEdge.tsx  CodeNode.tsx  ConnectionStatus.tsx  Controls.tsx  ErrorBoundary.tsx  LoadingScreen.tsx  RefactorComparison.tsx  RefactoringSidebar.tsx  Scene3D.tsx  Sidebar.tsx  (+2 more)
sample_project/: main.py  test_runner.py  utils.py
sample_project/api/: handlers.py
sample_project/models/: __init__.py  user.py
sample_project/services/: data_processor.py
src/: __init__.py
src/agents/: __init__.py  refactor.py  refactoring_agent.py
src/controllers/: __init__.py  analysis_controller.py  refactor_controller.py
src/core/: __init__.py  exceptions.py
src/models/: __init__.py  analysis_models.py  api_models.py
src/services/: __init__.py  analysis_service.py  database_service.py  message_service.py
src/utils/: __init__.py  file_utils.py  logging_utils.py
tests/: test_ast_analysis.py
(+14 files in other folders)
