[project]
name = "code-weaver"
version = "0.1.0"
description = "Static code analyzer with dead code detection and 3D visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "neo4j>=5.0.0",
    "vulture>=2.10",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0"
]
